[gd_scene load_steps=4 format=3 uid="uid://bsq5cwdtixaro"]

[ext_resource type="PackedScene" uid="uid://byrcwsu05jfly" path="res://scenes/ui/bubble_button.tscn" id="1_e1h1k"]
[ext_resource type="Script" path="res://scenes/ui/main.gd" id="1_ucle5"]
[ext_resource type="Texture2D" uid="uid://cafn1odqf0ewc" path="res://textures/ui/Logo.png" id="2_prp37"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ucle5")

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2
split_offset = 2

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="MarginContainer/HSplitContainer/CenterContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HSplitContainer/CenterContainer2/Control"]
layout_mode = 2
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_prp37")
stretch_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 50

[node name="SelectLevel" parent="MarginContainer/HSplitContainer/CenterContainer/VBoxContainer" instance=ExtResource("1_e1h1k")]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" parent="MarginContainer/CenterContainer/VBoxContainer/SelectLevel/Panel/TextureButton" index="0"]
text = "SELECT_LEVEL"

[node name="Settings" parent="MarginContainer/HSplitContainer/CenterContainer/VBoxContainer" instance=ExtResource("1_e1h1k")]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" parent="MarginContainer/CenterContainer/VBoxContainer/Settings/Panel/TextureButton" index="0"]
theme_override_font_sizes/font_size = 25
text = "SETTINGS"

[node name="Quit" parent="MarginContainer/HSplitContainer/CenterContainer/VBoxContainer" instance=ExtResource("1_e1h1k")]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" parent="MarginContainer/CenterContainer/VBoxContainer/Quit/Panel/TextureButton" index="0"]
theme_override_font_sizes/font_size = 20
text = "QUIT"

[connection signal="pressed" from="MarginContainer/HSplitContainer/CenterContainer/VBoxContainer/SelectLevel/Panel/TextureButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/CenterContainer/VBoxContainer/Settings/Panel/TextureButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/CenterContainer/VBoxContainer/Quit/Panel/TextureButton" to="." method="_on_quit_texture_button_pressed"]

[editable path="MarginContainer/HSplitContainer/CenterContainer/VBoxContainer/SelectLevel"]
[editable path="MarginContainer/HSplitContainer/CenterContainer/VBoxContainer/Settings"]
[editable path="MarginContainer/HSplitContainer/CenterContainer/VBoxContainer/Quit"]
